--- a/common/app/assets/stylesheets/head.defaults.scss
+++ b/common/app/assets/stylesheets/head.defaults.scss
@@ -8,7 +8,7 @@
 html {
     position: relative;
     min-height: 100%;
-    background-color: #eee;
+    background-color: #EEEEEE;
 }
 
 .wrapper {
