--- a/common/app/assets/stylesheets/_head.common.scss
+++ b/common/app/assets/stylesheets/_head.common.scss
@@ -7,6 +7,7 @@
 @import "vars";
 @import "membership-vars";
 @import "mixins";
+@import "module/facia/_mixins";
 
 /* ==========================================================================
    Base
@@ -31,3 +32,33 @@
 @import "layout/layout";
 @include guss-row-utility;
 @include guss-columns-utility;
+
+
+/* ==========================================================================
+   Base
+   ========================================================================== */
+@import "base/_tables";
+
+
+/* ==========================================================================
+   Facia
+   ========================================================================== */
+@import "module/facia/_extends";
+@import "module/facia/_items";
+@import "module/facia/_row-pattern";
+@import "module/facia/_facia-container";
+@import "module/facia/_linkslist";
+@import "module/containers/_sport";
+@import "module/containers/_features";
+@import "module/containers/_comment";
+@import "module/containers/_special";
+@import "module/containers/_section";
+@import "module/containers/_commentanddebate";
+@import "module/containers/_people";
+@import "module/containers/_misc";
+@import "module/containers/_popular";
+@import "module/containers/_related";
+@import "module/containers/_multimedia";
+@import "module/containers/_series";
+@import "module/facia/_pagination";
+@import "module/facia/snaps/_football";
