add purchase flow

--- a/app/views/events/eventPage.scala.html
+++ b/app/views/events/eventPage.scala.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="actions">
-                <a class="sign-in action" href="http://profile.theguardian.com/signin">Sign In to attend</a>
+                <a class="sign-in action" href="https://profile.theguardian.com/signin" data-url="@event.url">Sign In to attend</a>
             </div>
 
         </div>
