--- a/app/views/events/eventPage.scala.html
+++ b/app/views/events/eventPage.scala.html
@@ -7,9 +7,13 @@
 
     @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events"), Crumb(event.name.text, s"/events/${event.id}")))
 
-    <div class="event u-cf">
+    <div class="event">
         <div class="event__content container">
             <h1 class="event__name section-header page-header">@event.name.text</h1>
+
+            <div class="event__image">
+                <img src="@event.logo_url" alt="Event Image" />
+            </div>
 
             <div class="event__tickets">
                 <div class="js-datetime-enhance">
@@ -21,13 +25,13 @@
                 <span class="event__price-note"> per ticket.</span>
             </div>
 
-            <div class="event__image">
-                <img src="@event.logo_url" alt="Event Image" />
+            <div class="actions">
+                <a class="sign-in action" href="https://profile.theguardian.com/signin" data-url="@event.url">Sign In to attend</a>
             </div>
 
             <div class="event__meta">
-                <p class="event__location">@event.venue.name</p>
-                <p class="event__time">@event.start.pretty</p>
+                <p class="event__location"><span class="icon location--icon"></span>@event.venue.name</p>
+                <p class="event__time"><span class="icon time--icon"></span>@event.start.pretty</p>
 
                 <div class="event__description">@Html(event.description.getOrElse(model.EBRichText("foobar", "foobarhtml")).html)</div>
             </div>
