--- a/app/views/events/eventPage.scala.html
+++ b/app/views/events/eventPage.scala.html
@@ -5,7 +5,7 @@
 
 @main("Membership") {
 
-    @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events"), Crumb(event.name.text, s"/events/${event.id}")))
+    @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events"), Crumb(event.name.text, s"/event/${event.id}")))
 
     <div class="event">
         <div class="event__content container">
