--- a/app/views/partials/crumb.scala.html
+++ b/app/views/partials/crumb.scala.html
@@ -4,10 +4,16 @@
 <div class="breadcrumb">
 
     <ul class="crumbs u-unstyled">
-    @for(crumb <- crumbs) {
-        <li class="crumb">
-            <a href="@crumb.link">@crumb.text</a>
-        </li>
+    @for(crumb <- crumbs){
+        @if(crumb == crumbs.last){
+            <li class="crumb last">
+                <span>@crumb.text</span>
+            </li>
+        }else{
+            <li class="crumb">
+                <a href="@crumb.link">@crumb.text</a>
+            </li>
+        }
     }
     </ul>
 
