--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,17 +1,22 @@
+@import views.Crumb
+
 @main("Membership") {
+
+    @partials.crumb(Seq(Crumb("Home", "/")))
 
     <div class="index container">
 
         <h1 class="section-header">Membership</h1>
 
         <ul>
+            <li><a class="button" href="/become-a-member">Become a member</a></li>
             <li><a href="/events">Events</a></li>
-            <li>
-                <a href="/stripe">Stripe proto</a>
-            </li>
-            <li>
-                <a href="/go-cardless">Go Cardless</a>
-            </li>
+            @*<li>*@
+                @*<a href="/stripe">Stripe proto</a>*@
+            @*</li>*@
+            @*<li>*@
+                @*<a href="/go-cardless">Go Cardless</a>*@
+            @*</li>*@
         </ul>
     </div>
 
