--- a/app/views/signup/partnerRegistration.scala.html
+++ b/app/views/signup/partnerRegistration.scala.html
@@ -7,38 +7,38 @@
     <div class="container">
         <h1 class="section-header">Partner registration</h1>
 
-        <form action="" method="POST" id="payment-form" class="form">
+        <form action="" method="POST" id="payment-form" class="form js-stripe-form">
             <fieldset class="fieldset">
                 <span class="payment-errors"></span>
                 <div class="form-field">
                     <label class="label" for="cc-num">
                         <span>Card Number</span>
-                        <input type="tel" size="20" data-stripe="number" class="cc-num text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx"/>
+                        <input type="tel" size="20" data-stripe="number" class="js-cc-num text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx"/>
                     </label>
-                    <p class="error--card-number error hide">Please enter a valid card number</p>
+                    <p class="js-error--card-number error hide">Please enter a valid card number</p>
                 </div>
 
                 <div class="form-field">
                     <label class="label" for="cc-cvc">
                         <span>CVC</span>
-                        <input type="tel" size="4" data-stripe="cvc" class="cc-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC"/>
+                        <input type="tel" size="4" data-stripe="cvc" class="js-cc-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC"/>
                     </label>
-                    <p class="error--card-cvc error hide">Please enter a valid CVC number</p>
+                    <p class="js-error--card-cvc error hide">Please enter a valid CVC number</p>
                 </div>
 
                 <div class="form-field">
                     <label class="label" for="cc-exp-month">
                         <span>Expiration (MM/YYYY)</span>
                         <p>
-                            <input type="tel" size="2" data-stripe="exp-month" class="cc-exp-month text-input text-input--small" id="cc-exp-month" placeholder="MM"/>
+                            <input type="tel" size="2" data-stripe="exp-month" class="js-cc-exp-month text-input text-input--small" id="cc-exp-month" placeholder="MM"/>
                             <span> / </span>
-                            <input type="tel" size="4" data-stripe="exp-year" class="cc-exp-year text-input text-input--small" placeholder="YYYY"/>
+                            <input type="tel" size="4" data-stripe="exp-year" class="js-cc-exp-year text-input text-input--small" placeholder="YYYY"/>
                         </p>
                     </label>
-                    <p class="error--card-expiry error hide">Please enter a valid Expiry</p>
+                    <p class="js-error--card-expiry error hide">Please enter a valid Expiry</p>
                 </div>
 
-                <button type="submit" class="submit-input">Submit Payment</button>
+                <button type="submit" class="js-submit-input">Submit Payment</button>
 
             </fieldset>
         </form>
