--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,7 @@
         <h1 class="section-header">Membership</h1>
 
         <ul>
-            <li><a class="button" href="/become-a-member">Become a member</a></li>
+            <li><a class="button" href="/join">Become a member</a></li>
             <li><a href="/events">Events</a></li>
             @*<li>*@
                 @*<a href="/stripe">Stripe proto</a>*@
