--- a/app/views/joiner/payment.scala.html
+++ b/app/views/joiner/payment.scala.html
@@ -4,7 +4,7 @@
 
 @main("Membership") {
 
-@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/become-a-member"), Crumb("Partner registration", "/partner-registration")))
+@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a " + memberTier, "/join/" + memberTier), Crumb(memberTier + " registration", "/join/" + memberTier + "/payment")))
 
 <div class="container">
     <h1 class="section-header">@memberTier registration</h1>
