--- a/app/views/joiner/thankyou.scala.html
+++ b/app/views/joiner/thankyou.scala.html
@@ -7,7 +7,7 @@
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a " + memberTier, "/join/" + memberTier), Crumb(memberTier + " registration", "/join/" + memberTier + "/payment"), Crumb("Thank you " + memberTier, "/join/" + memberTier + "/thankyou")))
 
 <div class="container">
-    <h1 class="section-header">THANK YOU you are now a @memberTier</h1>
+    <h1 class="section-header">Thanks, you are now a @memberTier</h1>
 </div>
 
 }
