--- a/app/views/joiner/tier.scala.html
+++ b/app/views/joiner/tier.scala.html
@@ -14,7 +14,7 @@
 
     <p>Lost of goodies to go here</p>
 
-    <a href="/join/parter/payment">Pay to become a partner</a>
+    <a href="/join/partner/payment">Pay to become a partner</a>
 
 </div>
 
