--- a/app/views/signup/partnerRegistration.scala.html
+++ b/app/views/signup/partnerRegistration.scala.html
@@ -1,3 +1,5 @@
+@(validMonths: List[Int], validYears: List[Int])
+
 @import views.Crumb
 
 @main("Membership") {
@@ -13,7 +15,7 @@
                 <div class="form-field">
                     <label class="label" for="cc-num">
                         <span>Card Number</span>
-                        <input type="tel" size="20" data-stripe="number" class="js-cc-num text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx"/>
+                        <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19"/>
                     </label>
                     <p class="js-error--card-number error hide">Please enter a valid card number</p>
                 </div>
@@ -21,7 +23,7 @@
                 <div class="form-field">
                     <label class="label" for="cc-cvc">
                         <span>CVC</span>
-                        <input type="tel" size="4" data-stripe="cvc" class="js-cc-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC"/>
+                        <input type="tel" size="4" data-stripe="cvc" class="js-credit-card-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC" maxlength="4"/>
                     </label>
                     <p class="js-error--card-cvc error hide">Please enter a valid CVC number</p>
                 </div>
@@ -30,9 +32,19 @@
                     <label class="label" for="cc-exp-month">
                         <span>Expiration (MM/YYYY)</span>
                         <p>
-                            <input type="tel" size="2" data-stripe="exp-month" class="js-cc-exp-month text-input text-input--small" id="cc-exp-month" placeholder="MM"/>
+                            <select data-stripe="exp-month" class="js-credit-card-exp-month">
+                                <option selected="selected">Month</option>
+                                @for(month <- validMonths){
+                                <option value="@month">@month</option>
+                                }
+                            </select>
                             <span> / </span>
-                            <input type="tel" size="4" data-stripe="exp-year" class="js-cc-exp-year text-input text-input--small" placeholder="YYYY"/>
+                            <select data-stripe="exp-year" class="js-credit-card-exp-year">
+                                <option selected="selected">Year</option>
+                                @for(year <- validYears){
+                                <option value="@year">@year</option>
+                                }
+                            </select>
                         </p>
                     </label>
                     <p class="js-error--card-expiry error hide">Please enter a valid Expiry</p>
