got error passthrough working

--- a/app/views/signup/partnerRegistration.scala.html
+++ b/app/views/signup/partnerRegistration.scala.html
@@ -11,7 +11,7 @@
 
         <form action="" method="POST" id="payment-form" class="form js-stripe-form">
             <fieldset class="fieldset">
-                <span class="payment-errors"></span>
+                <span class="js-payment-errors error hide"></span>
                 <div class="form-field">
                     <label class="label" for="cc-num">
                         <span>Card Number</span>
