better ngw styling for form

--- a/common/app/assets/stylesheets/_button.scss
+++ b/common/app/assets/stylesheets/_button.scss
@@ -20,7 +20,8 @@
         }
     }
 
-    .sign-in--logged-in {
+    .sign-in--logged-in,
+    .default-action {
         background-color: $mem-brandOrange;
         &:hover {
             background-color: darken($mem-brandOrange, 15%);
