working validation and submission for payment form

--- a/app/views/joiner/thankyou/patron.scala.html
+++ b/app/views/joiner/thankyou/patron.scala.html
@@ -2,10 +2,10 @@
 
 @main("Membership") {
 
-@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Friend", "/join/friend"), Crumb("Friend registration", "/join/friend/payment"), Crumb("Thank you Friend", "/join/friend/thankyou")))
+@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Patron", "/join/patron"), Crumb("Patron registration", "/join/patron/payment"), Crumb("Thank you Patron", "/join/patron/thankyou")))
 
 <div class="container">
-    <h1 class="section-header">Thanks, you are now a Friend!</h1>
+    <h1 class="section-header">Thanks, you are now a Patron!</h1>
 </div>
 
 }
