--- a/app/views/joiner/thankyou/partner.scala.html
+++ b/app/views/joiner/thankyou/partner.scala.html
@@ -2,10 +2,10 @@
 
 @main("Membership") {
 
-@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Friend", "/join/friend"), Crumb("Friend registration", "/join/friend/payment"), Crumb("Thank you Friend", "/join/friend/thankyou")))
+@partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Partner", "/join/partner"), Crumb("Partner registration", "/join/partner/payment"), Crumb("Thank you Partner", "/join/partner/thankyou")))
 
 <div class="container">
-    <h1 class="section-header">Thanks, you are now a Friend!</h1>
+    <h1 class="section-header">Thanks, you are now a Partner!</h1>
 </div>
 
 }
