--- a/app/views/partials/joiner/paymentForm.scala.html
+++ b/app/views/partials/joiner/paymentForm.scala.html
@@ -11,34 +11,35 @@
         </div>
 
         <div class="fieldset__fields">
+
+            @* Credit Card number *@
+
             <div class="form-field">
                 <label class="label" for="cc-num">Card Number</label>
                 <div class="input">
-                    <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19"/>
+                    <input type="tel" size="20" data-stripe="number" class="js-credit-card-number text-input" id="cc-num" placeholder="xxxx xxxx xxxx xxxx" maxlength="19" data-error-message="Please enter a valid card number"/>
                 </div>
-                <p class="js-error--card-number error hide">Please enter a valid card number</p>
             </div>
 
             <div class="form-field">
                 <label class="label" for="cc-cvc">
                     <span>CVC</span>
-                    <input type="tel" size="4" data-stripe="cvc" class="js-credit-card-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC" maxlength="4"/>
+                    <input type="tel" size="4" data-stripe="cvc" class="js-credit-card-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC" maxlength="4" data-error-message="Please enter a valid CVC number"/>
                 </label>
-                <p class="js-error--card-cvc error hide">Please enter a valid CVC number</p>
             </div>
 
             <div class="form-field">
                 <label class="label" for="cc-exp-month">
                     <span>Expiration (MM/YYYY)</span>
                     <p>
-                        <select data-stripe="exp-month" class="js-credit-card-exp-month">
+                        <select data-stripe="exp-month" id="cc-exp-month" class="js-credit-card-exp-month" data-error-message="Please enter a valid Expiry">
                             <option selected="selected">Month</option>
                             @for(month <- selectDates.validCardMonths.toList){
                                 <option value="@month">@month</option>
                             }
                         </select>
                         <span> / </span>
-                        <select data-stripe="exp-year" class="js-credit-card-exp-year">
+                        <select data-stripe="exp-year" id="cc-exp-year" class="js-credit-card-exp-year" data-error-message="Please enter a valid Expiry">
                             <option selected="selected">Year</option>
                             @for(year <- selectDates.validCardYears.toList){
                                 <option value="@year">@year</option>
@@ -46,7 +47,6 @@
                         </select>
                     </p>
                 </label>
-                <p class="js-error--card-expiry error hide">Please enter a valid Expiry</p>
             </div>
         </div>
     </fieldset>
