new css, rename of main css file,

--- a/common/app/assets/stylesheets/base/_links.scss
+++ b/common/app/assets/stylesheets/base/_links.scss
@@ -13,3 +13,13 @@ a,
     text-decoration: none;
   }
 }
+
+.no-underline {
+    cursor: pointer;
+    text-decoration: none;
+    &:hover,
+    &:focus,
+    &:active {
+        text-decoration: none;
+    }
+}
