--- a/common/app/assets/stylesheets/components/_button.scss
+++ b/common/app/assets/stylesheets/components/_button.scss
@@ -1,30 +1,29 @@
-.actions {
-    margin: $gs-row-height 0 0 0;
+.button {
+    margin: $gs-row-height 0 $gs-row-height 0;
+    display: inline-block;
+}
 
-    &.top {
-      margin: 0 0 $gs-row-height 0;
+.sign-in {
+    background-color: $mem-brandBlue;
+    color: #FFFFFF;
+    padding: $gutter/2;
+    &:hover {
+        background-color: darken($mem-brandBlue, 15%);
     }
+}
 
-    .action {
-        display: inline-block;
-        margin: 0 $gutter 0 0;
+.sign-in--logged-in {
+    background-color: $mem-brandOrange;
+    &:hover {
+        background-color: darken($mem-brandOrange, 15%);
     }
+}
 
-    .sign-in {
-        background-color: $mem-brandBlue;
-        color: #FFFFFF;
-        padding: $gutter/2;
-        &:hover {
-            background-color: darken($mem-brandBlue, 15%);
-            text-decoration: none;
-        }
+.join {
+    background-color: $mem-brandBlue;
+    color: #FFFFFF;
+    padding: $gutter;
+    &:hover {
+        background-color: darken($mem-brandBlue, 15%);
     }
-
-    .sign-in--logged-in {
-        background-color: $mem-brandOrange;
-        &:hover {
-            background-color: darken($mem-brandOrange, 15%);
-            text-decoration: none;
-        }
-    }
-} 
+}
