--- a/common/app/assets/stylesheets/_head.common.scss
+++ b/common/app/assets/stylesheets/_head.common.scss
@@ -21,6 +21,7 @@
 @import "base/lists";
 @import "base/forms";
 @import "base/tables";
+@import "base/images";
 
 /* ==========================================================================
    Layout
@@ -32,27 +33,3 @@
 @import "layout/layout";
 @import "layout/footer";
 @import "layout/header";
-
-
-/* ==========================================================================
-   Facia
-   ========================================================================== */
-@import "module/facia/_extends";
-@import "module/facia/_items";
-@import "module/facia/_row-pattern";
-@import "module/facia/_facia-container";
-@import "module/facia/_linkslist";
-@import "module/containers/_sport";
-@import "module/containers/_features";
-@import "module/containers/_comment";
-@import "module/containers/_special";
-@import "module/containers/_section";
-@import "module/containers/_commentanddebate";
-@import "module/containers/_people";
-@import "module/containers/_misc";
-@import "module/containers/_popular";
-@import "module/containers/_related";
-@import "module/containers/_multimedia";
-@import "module/containers/_series";
-@import "module/facia/_pagination";
-@import "module/facia/snaps/_football";
