--- a/app/views/joiner/tier/patron.scala.html
+++ b/app/views/joiner/tier/patron.scala.html
@@ -5,7 +5,7 @@
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Patron", "/join/patron")))
 
 
-<div class="container">
+<div class="page-inner-container">
 
     <h1 class="section-header">Patron Tier</h1>
 
