--- a/app/views/event/list.scala.html
+++ b/app/views/event/list.scala.html
@@ -6,7 +6,7 @@
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Events", "/events")))
 
 <div class="container--features">
-    <section class="container container--people container--row-pattern">
+    <section class="page-inner-container container--people container--row-pattern">
         <div class="container__border tone-feature tone-accent-border"></div>
         <div class="container__header">
             <h2 class="container__title tone-feature tone-background">
