--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 
     @partials.crumb(Seq(Crumb("Home", "/")))
 
-    <div class="index container">
+    <div class="index page-inner-container">
 
         <h1 class="section-header">Membership</h1>
 
