--- a/app/views/joiner/payment/patron.scala.html
+++ b/app/views/joiner/payment/patron.scala.html
@@ -4,7 +4,7 @@
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Friend", "/join/friend"), Crumb("Friend registration", "/join/friend/payment")))
 
-<div class="container">
+<div class="page-inner-container">
     <h1 class="section-header">Friend registration</h1>
     @partials.joiner.paymentForm()
 </div>
