--- a/app/views/joiner/thankyou/partner.scala.html
+++ b/app/views/joiner/thankyou/partner.scala.html
@@ -4,7 +4,7 @@
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Friend", "/join/friend"), Crumb("Friend registration", "/join/friend/payment"), Crumb("Thank you Friend", "/join/friend/thankyou")))
 
-<div class="container">
+<div class="page-inner-container">
     <h1 class="section-header">Thanks, you are now a Friend!</h1>
 </div>
 
