--- a/app/views/joiner/tier/friend.scala.html
+++ b/app/views/joiner/tier/friend.scala.html
@@ -5,7 +5,7 @@
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/join"), Crumb("Become a Friend", "/join/friend")))
 
 
-<div class="container">
+<div class="page-inner-container">
 
     <h1 class="section-header">Friend Tier</h1>
 
