--- a/app/views/joiner/tierList.scala.html
+++ b/app/views/joiner/tierList.scala.html
@@ -4,7 +4,7 @@
 
 @partials.crumb(Seq(Crumb("Home", "/"), Crumb("Become a member", "/become-a-member")))
 
-<div class="container">
+<div class="page-inner-container">
 
     <h1 class="section-header">Become a member</h1>
 
