removed rubbish images and replaced with cats!, changed bower_components to bower-components in all relevant places

--- a/app/views/joiner/tier/partner.scala.html
+++ b/app/views/joiner/tier/partner.scala.html
@@ -9,7 +9,7 @@
 
     <h1 class="section-header">Partner Tier</h1>
 
-    <img src="@routes.Assets.at("images/placeholder-large.png")" alt="" class="full-width"/>
+    <img src="@routes.Assets.at("images/placeholder-large.jpeg")" alt="" class="full-width"/>
 
     <section class="tier-intro">
         <p>Aliquam pellentesque eros eget metus sagittis, ut molestie nisi molestie. Sed nisl nunc, vehicula sed adipiscing in, tincidunt eu felis. Nam venenatis, tortor ac consequat venenatis, dolor odio ullamcorper diam, sed tempus purus lacus at justo.</p>
@@ -30,19 +30,19 @@
         <ul class="u-unstyled">
             <li id="link-one" class="list-item">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-medium-square.png")" alt="" class="full-width"/>
+                    <img src="@routes.Assets.at("images/placeholder-medium-square.jpeg")" alt="" class="full-width"/>
                 </div>
                 <p class="list-item__secondary">Vestibulum facilisis rhoncus libero nec congue.</p>
             </li>
             <li id="link-two" class="list-item">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-medium-square.png")" alt="" class="full-width"/>
+                    <img src="@routes.Assets.at("images/placeholder-medium-square.jpeg")" alt="" class="full-width"/>
                 </div>
                 <p class="list-item__secondary">Morbi velit arcu, tempor at metus non, ultrices.</p>
             </li>
             <li id="link-three" class="list-item">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-medium-square.png")" alt="" class="full-width"/>
+                    <img src="@routes.Assets.at("images/placeholder-medium-square.jpeg")" alt="" class="full-width"/>
                 </div>
                 <p class="list-item__secondary">Cras tortor odio, laoreet nec pharetra non.</p>
             </li>
@@ -53,37 +53,37 @@
         <ul class="u-unstyled">
             <li class="list-item list-item--small">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.png")" alt=""/>
+                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
                 </div>
                 <p>Vestibulum facilisis rhoncus libero nec congue.</p>
             </li>
             <li class="list-item list-item--small">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.png")" alt=""/>
+                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
                 </div>
                 <p>Donec nisl enim, fermentum quis sem id</p>
             </li>
             <li class="list-item list-item--small">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.png")" alt=""/>
+                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
                 </div>
                 <p>Aliquam pharetra tellus nec massa lacinia volutpat.</p>
             </li>
             <li class="list-item list-item--small">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.png")" alt=""/>
+                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
                 </div>
                 <p>Morbi non iaculis metus. Donec nisl enim.</p>
             </li>
             <li class="list-item list-item--small">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.png")" alt=""/>
+                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
                 </div>
                 <p>Laoreet at urna ac, tincidunt accumsan mi.</p>
             </li>
             <li class="list-item list-item--small">
                 <div class="list-item__primary">
-                    <img src="@routes.Assets.at("images/placeholder-tiny-square.png")" alt=""/>
+                    <img src="@routes.Assets.at("images/placeholder-tiny-square.jpeg")" alt=""/>
                 </div>
                 <p>Quisque scelerisque magna lectus, a euismod.</p>
             </li>
