--- a/app/views/partials/joiner/paymentForm.scala.html
+++ b/app/views/partials/joiner/paymentForm.scala.html
@@ -58,7 +58,7 @@
         </div>
         <div class="fieldset__fields">
             <div class="actions top">
-                <button type="submit" class="submit-input default-action">Subscribe</button>
+                <button type="submit" class="submit-input js-submit-inputdefault-action">Subscribe</button>
             </div>
         </div>
     </fieldset>
