--- a/app/views/partials/joiner/paymentForm.scala.html
+++ b/app/views/partials/joiner/paymentForm.scala.html
@@ -23,26 +23,26 @@
 
             <div class="form-field">
                 <label class="label" for="cc-cvc">
-                    <span>CVC</span>
+                    <span>Security code</span>
                     <input type="tel" size="4" data-stripe="cvc" class="js-credit-card-cvc text-input text-input--small" id="cc-cvc" placeholder="CVC" maxlength="4" data-error-message="Please enter a valid CVC number"/>
                 </label>
             </div>
 
             <div class="form-field">
                 <label class="label" for="cc-exp-month">
-                    <span>Expiration (MM/YYYY)</span>
+                    <span>Expiration (MM/YY)</span>
                     <p>
                         <select data-stripe="exp-month" id="cc-exp-month" class="js-credit-card-exp-month" data-error-message="Please enter a valid Expiry">
                             <option selected="selected">Month</option>
-                            @for(month <- selectDates.validCardMonths.toList){
+                            @for(month <- selectDates.validCardMonths){
                                 <option value="@month">@month</option>
                             }
                         </select>
                         <span> / </span>
                         <select data-stripe="exp-year" id="cc-exp-year" class="js-credit-card-exp-year" data-error-message="Please enter a valid Expiry">
                             <option selected="selected">Year</option>
-                            @for(year <- selectDates.validCardYears.toList){
-                                <option value="@year">@year</option>
+                            @for((year, formattedYear) <- selectDates.validCardYears){
+                                <option value="@year">@formattedYear</option>
                             }
                         </select>
                     </p>
