add loading gif to payment form

--- a/app/views/partials/joiner/paymentForm.scala.html
+++ b/app/views/partials/joiner/paymentForm.scala.html
@@ -57,8 +57,9 @@
             <div class="form__note">You will be charged £15/month</div>
         </div>
         <div class="fieldset__fields">
-            <div class="actions top">
+            <div class="actions top js-waiting-container">
                 <button type="submit" class="submit-input js-submit-input default-action">Subscribe</button>
+                <div class="i-wait"><img src="@routes.Assets.at("images/wait.gif")" alt=""/></div>
             </div>
         </div>
     </fieldset>
